add new rules for header styles

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -10,46 +10,47 @@
     <title>Mucho-layout</title>
 </head>
 <body>
-    <header class="top-navigation">
-        <div class="top-navigation__logo">
-                <img src="../img/logo.svg" alt="logo">
+    <header class="navigation">
+        <div class="top-navigation">
+            <div class="top-navigation__logo">
+                    <img src="../img/logo.svg" alt="logo">
+            </div>
+            <p class="top-navigation__presentation">
+                    <span>We are a strategy, branding, packaging, and graphic design.</span>
+                    <span> studio. We create design with meaning from our locations </span>
+                    <span> in Barcelona, Paris, San Francisco, New York and Sydney.</span>
+                    <span>We’d love to hear from you at info@wearemucho.com</span>
+            </p>
+            <nav class="top-navigation__max-nav">
+                <ul>
+                    <li>
+                        <a href="#">Work</a>
+                    </li>
+                    <li>
+                        <a href="#">Strategy</a>
+                    </li>
+                    <li>
+                        <a href="#">Sharing</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Jobs</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="top-navigation__min-nav">
+                <img class ="min-nav__icon" src="../img/icon/collapsed-menu.svg" alt="Menu">
+            </nav>
         </div>
-        <p class="top-navigation__presentation">
-                <span>We are a strategy, branding, packaging, and graphic design.</span>
-                <span> studio. We create design with meaning from our locations </span>
-                <span> in Barcelona, Paris, San Francisco, New York and Sydney.</span>
-                <span>We’d love to hear from you at info@wearemucho.com</span>
-        </p>
-        <nav class="top-navigation__max-nav">
-            <ul>
-                <li>
-                    <a href="#">Work</a>
-                </li>
-                <li>
-                    <a href="#">Strategy</a>
-                </li>
-                <li>
-                    <a href="#">Sharing</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Jobs</a>
-                </li>
-                <li>
-                    <a href="#">Shop</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
-        <nav class="top-navigation__min-nav">
-            <img class ="min-nav__icon" src="../img/icon/collapsed-menu.svg" alt="Menu">
-        </nav>
-    </header>
-    <nav class="secondary-nav">
+        <nav class="secondary-nav">
             <div class="secondary-nav__row">
                 <p class="row__title">All Services</p>
                 <div class="row__icon">
@@ -63,6 +64,7 @@
                 </div>
             </div>
         </nav>
+    </header>
 
     <main class="mosaic">
         <div class="mosaic__tile">
