added more styles

--- a/staff/albert-fuente/mucho-layout/mucho-sass/index.html
+++ b/staff/albert-fuente/mucho-layout/mucho-sass/index.html
@@ -30,26 +30,24 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
-
         </div>
-
     </header>
 
     <main>
         <div class="imagenes">
             <div class="imagenes__box one"> <p class="imagenes__texting">Arrels Barcelona</p> </div>
-            <div class="imagenes__box"><p class="imagenes__texting">Clippings</p> </div>
-            <div class="imagenes__box "><p class="imagenes__texting">The Ocean race</p>            </div>
-            <div class="imagenes__box"><p class="imagenes__texting">Alpine Investors</p>            </div>
-            <div class="imagenes__box">  <p class="imagenes__texting">Mucho talks</p>            </div>
-            <div class="imagenes__box">        <p class="imagenes__texting">Paradigm</p>            </div>
+            <div class="imagenes__box two"><p class="imagenes__texting">Clippings</p> </div>
+            <div class="imagenes__box three "><p class="imagenes__texting">The Ocean race</p>            </div>
+            <div class="imagenes__box four"><p class="imagenes__texting">Alpine Investors</p>            </div>
+            <div class="imagenes__box five">  <p class="imagenes__texting">Mucho talks</p>            </div>
+            <div class="imagenes__box six">        <p class="imagenes__texting paradigm">Paradigm</p>            </div>
             <div class="imagenes__box seven">   <p class="imagenes__texting">Apple</p>            </div>
-            <div class="imagenes__box">   <p class="imagenes__texting">Martin Book</p>            </div>
-            <div class="imagenes__box">     <p class="imagenes__texting">Cuatrecases</p>            </div>
-            <div class="imagenes__box">     <p class="imagenes__texting">TeleMadrid</p>            </div>
-            <div class="imagenes__box">      <p class="imagenes__texting">Paypal</p>            </div>
-            <div class="imagenes__box">      <p class="imagenes__texting">Telerama</p>          </div>
-            <div class="imagenes__about">
+            <div class="imagenes__box eight">   <p class="imagenes__texting">Martin Book</p>            </div>
+            <div class="imagenes__box nine">     <p class="imagenes__texting">Cuatrecases</p>            </div>
+            <div class="imagenes__box ten">     <p class="imagenes__texting">TeleMadrid</p>            </div>
+            <div class="imagenes__box eleven">      <p class="imagenes__texting">Paypal</p>            </div>
+            <div class="imagenes__box twelve">      <p class="imagenes__texting">Telerama</p>          </div>
+            <div class="imagenes__about thirteen">
                 <h4>About</h4>
                 <p>We create design with meaning. Great design speaks to your head, and your heart. It makes you feel different, and think differently. </p>
                 <p><a href="#" class="imagenes--link">Read More</a> </p>
@@ -104,7 +102,7 @@
             </div>
             <div class="media">
                 <p><i class="fab fa-instagram"></i></i></p>
-                <p><i class="fab 3x fa-facebook"></i></p>
+                <p><i class="fab  fa-facebook"></i></p>
                 <p><i class="fab fa-linkedin"></i></p>
                 <p><i class="fab fa-twitter-square"></i></p>
             </div>
