--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -72,132 +72,131 @@
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x750" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1250" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1251" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x752" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1252" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile mosaic__tile--expand-grid1">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/3000x2250" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x753" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1253" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x754" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1254" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile mosaic__tile--expand-grid2">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="xhttp://source.unsplash.com/random/1200x1000" alt="img_grid.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x755" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1008x1000" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile mosaic__tile--expand-grid3">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1200x807" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x756" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1200x808" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x757" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1011x1000" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile mosaic__tile--expand-grid4">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/1200x809" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x758" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1200x810" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile mosaic__tile--expand-grid5">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/2000x2000" alt="img_grid.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x759" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1200x812" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x760" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1200x813" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x761" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1200x814" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1000x762" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/1000x763" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/1000x764" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/1000x765" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/1000x766" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/1000x767" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1200x815" alt="img_00.jpg">
         </div>
         <article class="mosaic__article">
             <h3>@wearemucho</h3>
             <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? See our approach here:</p>
         </article>
-        
         <article class="mosaic__article">
                 <h3>Talking & Teaching</h3>
                 <p>PostGráfica is a masters course developed by Mucho on Strategic Thinking, Graphic Design and Creative Business. For more info: postgrafica.idepbarcelona.com</p>
@@ -212,10 +211,9 @@
     <footer class="foot_info">
         <div class="contact">
             <p class="contact-business">
-                <span>We look forward to hearing from you. For new </span>
-                <span>business, please contact the closest office directly.</span>
-                <span>For general enquiries, please email us:</span>
-                <span><a href="">@wearemucho.com</a></span>
+                <span>We look forward to hearing from you.</span>
+                <span>For new business, please contact the closest office directly.</span>
+                <span>For general enquiries, please email us: <a href="#">@wearemucho.com</a></span>
             </p>
             <div class= "contact-set">
                 <address class="contact-card">
