--- a/staff/jorge-garces/mucho-layout/desktop/index.html
+++ b/staff/jorge-garces/mucho-layout/desktop/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mucho | Branding</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="output.css">
     <script src="https://kit.fontawesome.com/0ebe3f9bf2.js"></script>
 </head>
 
@@ -72,24 +72,27 @@
             <figure class="mosaic__image img17"><img src="https://source.unsplash.com/random/800x567" alt=""></figure>
             <figure class="mosaic__image">
                 <article class="articulo">
-                    <h4 class='articulo__h4'>@wearemucho</h4>
-                    <p class='articulo__p'>Lorem fistrum pupita caballo blanco caballo negroorl ese pedazo de de la
+                    <h4 class='articulo__title'>@wearemucho</h4>
+                    <p class='articulo__content'>Lorem fistrum pupita caballo blanco caballo negroorl ese pedazo de de
+                        la
                         pradera ahorarr pecador
                         ese que llega. </p>
                 </article>
             </figure>
             <figure class="mosaic__image">
                 <article class="articulo">
-                    <h4 class='articulo__h4'>@wearemucho</h4>
-                    <p class='articulo__p'>Lorem fistrum pupita caballo blanco caballo negroorl ese pedazo de de la
+                    <h4 class='articulo__title'>@wearemucho</h4>
+                    <p class='articulo__content'>Lorem fistrum pupita caballo blanco caballo negroorl ese pedazo de de
+                        la
                         pradera ahorarr pecador
                         ese que llega.</p>
                 </article>
             </figure>
             <figure class="mosaic__image">
                 <article class="articulo">
-                    <h4 class='articulo__h4'>@wearemucho</h4>
-                    <p class='articulo__p'>Lorem fistrum pupita caballo blanco caballo negroorl ese pedazo de de la
+                    <h4 class='articulo__title'>@wearemucho</h4>
+                    <p class='articulo__content'>Lorem fistrum pupita caballo blanco caballo negroorl ese pedazo de de
+                        la
                         pradera ahorarr pecador
                         ese que llega.</p>
                 </article>
@@ -97,7 +100,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class='footer'>
         <p class='footer__text'>We look forward to hearing from you.
             For new business, please contact the closest office directly.
             For general enquiries, please email us: info@wearemucho.com</p>
