improves grid layout for desktop version

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -88,14 +88,7 @@
             </div>
             <img src="http://source.unsplash.com/random/2000x1252" alt="img_00.jpg">
         </div>
-        <div class="mosaic__tile mosaic__tile--expand-grid1">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/3000x2250" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
+        <div class="mosaic__tile tile--expand-grid1">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
@@ -109,89 +102,96 @@
             </div>
             <img src="http://source.unsplash.com/random/2000x1254" alt="img_00.jpg">
         </div>
-        <div class="mosaic__tile mosaic__tile--expand-grid2">
+        <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="xhttp://source.unsplash.com/random/1200x1000" alt="img_grid.jpg">
+            <img src="http://source.unsplash.com/random/2000x1255" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile tile--expand-grid2">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/2000x1256" alt="img_grid.jpg">
+        </div>
+        <div class="mosaic__tile tile--expand-grid3">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/2000x1257" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1008x1000" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1258" alt="img_00.jpg">
         </div>
-        <div class="mosaic__tile mosaic__tile--expand-grid3">
+        <div class="mosaic__tile tile--expand-grid4">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1200x807" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/1200x808" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1259" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1011x1000" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1260" alt="img_00.jpg">
         </div>
-        <div class="mosaic__tile mosaic__tile--expand-grid4">
+        <div class="mosaic__tile tile--expand-grid5">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1200x809" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/1200x810" alt="img_00.jpg">
-        </div>
-        <div class="mosaic__tile mosaic__tile--expand-grid5">
-            <div class="mosaic__text">
-                <h3>Title</h3>
-                <p>This is an example of text mosaic tile.</p>
-            </div>
-            <img src="http://source.unsplash.com/random/2000x2000" alt="img_grid.jpg">
+            <img src="http://source.unsplash.com/random/2000x1261" alt="img_grid.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1200x812" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1262" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1200x813" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1263" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1200x814" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1264" alt="img_00.jpg">
         </div>
         <div class="mosaic__tile">
             <div class="mosaic__text">
                 <h3>Title</h3>
                 <p>This is an example of text mosaic tile.</p>
             </div>
-            <img src="http://source.unsplash.com/random/1200x815" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/2000x1265" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/2000x1266" alt="img_00.jpg">
+        </div>
+        <div class="mosaic__tile">
+            <div class="mosaic__text">
+                <h3>Title</h3>
+                <p>This is an example of text mosaic tile.</p>
+            </div>
+            <img src="http://source.unsplash.com/random/2000x1267" alt="img_00.jpg">
         </div>
         <article class="mosaic__article">
             <h3>@wearemucho</h3>
