--- a/staff/adria-arquimbau/mucho-layout/with BEM/index.html
+++ b/staff/adria-arquimbau/mucho-layout/with BEM/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body class="body">
-        <!-- header logo en css nrmal es head1 -->
-        <!-- y en index.saas es header___logo -->
+    <!-- header logo en css nrmal es head1 -->
+    <!-- y en index.saas es header___logo -->
     <div class="header">
         <div class="header__logo">
             <a class="header--logo" href="https//:wearemucho.com" class="logo">
@@ -28,8 +28,13 @@
     </div>
 
     <div class="nav">
-        <div class="nav__type"><h2 class="nav--type">All Services</h2></div>
-        <div class="nav__type"><h2 class="nav--type">All Industries</h2></h2></div>
+        <div class="nav__type">
+            <h2 class="nav--type">All Services</h2>
+        </div>
+        <div class="nav__type">
+            <h2 class="nav--type">All Industries</h2>
+            </h2>
+        </div>
     </div>
 
     <div class="contImg">
@@ -104,62 +109,54 @@
             <img class="contImg--imgnormal" src="https://placeimg.com/640/480/animals" alt="">
         </div>
         <div>
-                <img class="contImg--imgnormal" src="https://placeimg.com/640/480/animals" alt="">
-            </div>
+            <img class="contImg--imgnormal" src="https://placeimg.com/640/480/animals" alt="">
+        </div>
 
 
 
     </div>
 
-    <nav class="contenedorNavInf">
-        <div class="footerBox">
-            <h5>Title</h5>
+    <div class="contInferior">
+        <div class="contInferior__bloque">
+            <h5 class="contInferior--titulo">Title</h5>
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus adipisci iste iure veniam illo omnis
+            <p class="contInferior--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus adipisci iste iure veniam illo omnis
                 modi vero impedit suscipit, ea delectus natus rem minima cum laboriosam esse aspernatur eligendi. Nihil.
             </p>
         </div>
-        <div class="footerBox">
-            <h5>Title</h5>
+        <div class="contInferior__bloque">
+            <h5 class="contInferior--titulo">Title</h5>
             <br>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, fugiat aperiam! Blanditiis dolores eos
+            <p class="contInferior--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, fugiat aperiam! Blanditiis dolores eos
                 sint, ratione saepe itaque inventore rem! Voluptatum nemo reiciendis obcaecati, exercitationem libero
                 iure magnam modi dolorum?</p>
         </div>
-        <div class="footerBox">
-            <h5>Title</h5>
+        <div class="contInferior__bloque">
+            <h5 class="contInferior--titulo">Title</h5>
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi cum mollitia. Non,
+            <p class="contInferior--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi cum mollitia. Non,
                 consequatur aliquid omnis enim voluptatem cupiditate eaque, iure dolor sint asperiores, quis dignissimos
                 laborum vero dolorem quas.</p>
         </div>
-    </nav>
+    </div>
 
-    <footer class="footer">
-
-        <div>
-
-            <div class="cr">
-                <p>Copyright © 2019 Adrià Arquimbau Project, si lo copias te denunsio ;P</p>
-            </div>
-
+    <div class="footer">
+        <div class="footer__copyright">
+            <p>Copyright © 2019 Adrià Arquimbau Project, si lo copias te denunsio ;P</p>
         </div>
-
-        <p>Subscribe:</p>
-        <a class="rrss" href="https://www.instagram.com/adriaarki/">
-            <i class="fab fa-instagram fa-1x"></i>
-        </a>
-        <a class="rrss" href="#">
-            <i wit class="fab fa-twitter fa-1x"></i>
-        </a>
-        <a class="rrss" href="#">
-            <i class="fab fa-linkedin fa-1x"></i>
-        </a>
-
-
-    </footer>
-
-
+        <div class="footer__rrss">
+            <p>Subscribe:</p>
+            <a class="rrss" href="https://www.instagram.com/adriaarki/">
+                <i class="fab fa-instagram fa-1x"></i>
+            </a>
+            <a class="rrss" href="#">
+                <i wit class="fab fa-twitter fa-1x"></i>
+            </a>
+            <a class="rrss" href="#">
+                <i class="fab fa-linkedin fa-1x"></i>
+            </a>
+        </div>
+    </div>
+    
 </body>
-
 </html>
