--- a/staff/jorge-garces/mucho-layout/desktop/index.html
+++ b/staff/jorge-garces/mucho-layout/desktop/index.html
@@ -52,24 +52,149 @@
     </header>
     <main>
         <section class="mosaic">
-            <figure class="mosaic__image img1"><img src="https://source.unsplash.com/random/800x550" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x551" alt=""></figure>
-            <figure class="mosaic__image img3"><img src="https://source.unsplash.com/random/800x552" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x553" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x554" alt=""></figure>
-            <figure class="mosaic__image img6"><img src="https://source.unsplash.com/random/800x555" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x556" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x557" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x558" alt=""></figure>
-            <figure class="mosaic__image img9"><img src="https://source.unsplash.com/random/800x559" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x560" alt=""></figure>
-            <figure class="mosaic__image img12 "><img src="https://source.unsplash.com/random/800x561" alt=""></figure>
-            <figure class="mosaic__image "><img src="https://source.unsplash.com/random/800x562" alt=""></figure>
-            <figure class="mosaic__image "><img src="https://source.unsplash.com/random/800x563" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x564" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x565" alt=""></figure>
-            <figure class="mosaic__image"><img src="https://source.unsplash.com/random/800x566" alt=""></figure>
-            <figure class="mosaic__image img17"><img src="https://source.unsplash.com/random/800x567" alt=""></figure>
+
+            <figure class="mosaic__image img1">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x550" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x551" alt="">
+            </figure>
+
+            <figure class="mosaic__image img3">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x552" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x553" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x554" alt="">
+            </figure>
+
+            <figure class="mosaic__image img6">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x555" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x556" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x557" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x558" alt="">
+            </figure>
+
+            <figure class="mosaic__image img9">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x559" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x560" alt="">
+            </figure>
+
+            <figure class="mosaic__image img12 ">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x561" alt="">
+            </figure>
+            <figure class="mosaic__image ">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x562" alt="">
+            </figure>
+
+            <figure class="mosaic__image ">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x563" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x564" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x565" alt="">
+            </figure>
+
+            <figure class="mosaic__image">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x566" alt="">
+            </figure>
+
+            <figure class="mosaic__image img17">
+                <div class="card">
+                    <h2 class='card__title'>Arrels Barcelona</h2>
+                    <p class='card__content'>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img src="https://source.unsplash.com/random/800x567" alt="">
+            </figure>
             <figure class="mosaic__image">
                 <article class="articulo">
                     <h4 class='articulo__title'>@wearemucho</h4>
