--- a/staff/adria-arquimbau/mucho-layout/without BEM/index.html
+++ b/staff/adria-arquimbau/mucho-layout/without BEM/index.html
@@ -52,7 +52,7 @@
             <img src="https://placeimg.com/640/480/arch" alt="">
         </div>
         <div>
-            <img src="https://placeimg.com/640/480/people" alt="">
+            <img class="hover" src="https://placeimg.com/640/480/people" alt="">
         </div>
         <div>
             <img src="https://placeimg.com/640/480/tech" alt="">
