for each and indexOf

--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -16,5 +16,8 @@
     <script src="indexOf.js"></script>
     <script src="indexOf.demo.js"></script>
 
+    <script src="forEach.js"></script>
+    <script src="forEach.demo.js"></script>
+
 </body>
 </html>
