--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -19,5 +19,7 @@
     <script src="forEach.js"></script>
     <script src="forEach.demo.js"></script>
 
+    <script src="lastIndexOf.js"></script>
+    <script src="lastIndexOf.demo.js"></script>
 </body>
 </html>
