--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -21,5 +21,11 @@
 
     <script src="lastIndexOf.js"></script>
     <script src="lastIndexOf.demo.js"></script>
+
+    <script src="reduceRight.js"></script>
+    <script src="reduceRight.demo.js"></script>
+
+    <script src="reverse.js"></script>
+    <script src="reverse.demo.js"></script>
 </body>
 </html>
