--- a/staff/jose-ortuno/array-functions/index.html
+++ b/staff/jose-ortuno/array-functions/index.html
@@ -13,5 +13,11 @@
     <script src="copyWithin.demo.js"></script>
     <script src="entries.js"></script>
     <script src="entries.demo.js"></script>
+    <script src="every.js"></script>
+    <script src="every.demo.js"></script>
+    <script src="fill.js"></script>
+    <script src="fill.demo.js"></script>
+    <script src="reduce.js"></script>
+    <script src="reduce.demo.js"></script>
 </body>
 </html>
