add more array-functions 2

--- a/staff/carolina-zhou/array-functions/index.html
+++ b/staff/carolina-zhou/array-functions/index.html
@@ -31,6 +31,13 @@
     <script src="findIndex.js"></script>
     <script src="findIndex.demo.js"></script>
 
+    <!-- Revisar
+    <script src="flat.js"></script>
+    <script src="flat.demo.js"></script> -->
+
+    <script src="flatMap.js"></script>
+    <script src="flatMap.demo.js"></script>
+
     <script src="forEach.js"></script>
     <script src="forEach.demo.js"></script>
 
@@ -75,6 +82,9 @@
 
     <script src="slice.js"></script>
     <script src="slice.demo.js"></script>
+
+    <script src="some.js"></script>
+    <script src="some.demo.js"></script>
 
     <script src="toString.js"></script>
     <script src="toString.demo.js"></script>
