--- a/staff/adria-arquimbau/js/array-functions/index.html
+++ b/staff/adria-arquimbau/js/array-functions/index.html
@@ -7,25 +7,91 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="push.js"></script>
-    <script src="push.demo.js"></script>
+    <script src="from.js"></script>
+   <script src="from.demo.js"></script>
 
-    <script src="pop.js"></script>
-    <script src="pop.demo.js"></script>
+   <script src="isArray.js"></script>
+   <script src="isArray.demo.js"></script>
 
-    <script src="indexOf.js"></script>
-    <script src="indexOf.demo.js"></script>
+   <script src="arrayOf.js"></script>
+   <script src="arrayOf.demo.js"></script>
 
-    <script src="forEach.js"></script>
-    <script src="forEach.demo.js"></script>
+   <script src="arrayConcat.js"></script>
+   <script src="arrayConcat.demo.js"></script>
 
-    <script src="lastIndexOf.js"></script>
-    <script src="lastIndexOf.demo.js"></script>
+   <script src="arrayWithin.js"></script>
+   <script src="arrayWithin.demo.js"></script>
 
-    <script src="reduceRight.js"></script>
-    <script src="reduceRight.demo.js"></script>
+   <script src="fill.js"></script>
+   <script src="fill.demo.js"></script>
 
-    <script src="reverse.js"></script>
-    <script src="reverse.demo.js"></script>
+   <script src="filter.js"></script>
+   <script src="filter.demo.js"></script>
+
+   <script src="find.js"></script>
+   <script src="find.demo.js"></script>
+
+   <script src="findIndex.js"></script>
+   <script src="findIndex.demo.js"></script>
+
+   <script src="keys.js"></script>
+   <script src="keys.demo.js"></script>
+
+   <script src="every.js"></script>
+   <script src="every.demo.js"></script>
+
+   <script src="fill.js"></script>
+   <script src="fill.demo.js"></script>
+
+   <script src="filter.js"></script>
+   <script src="filter.demo.js"></script>
+
+   <script src="find.js"></script>
+   <script src="find.demo.js"></script>
+
+   <script src="findIndex.js"></script>
+   <script src="findIndex.demo.js"></script>
+
+   <script src="keys.js"></script>
+   <script src="keys.demo.js"></script>
+
+   <script src="indexOf.js"></script>
+   <script src="indexOf.demo.js"></script>
+
+   <script src="forEach.js"></script>
+   <script src="forEach.demo.js"></script>
+
+   <script src="lastIndexOf.js"></script>
+   <script src="lastIndexOf.demo.js"></script>
+
+   <script src="reduceRight.js"></script>
+   <script src="reduceRight.demo.js"></script>
+
+   <script src="reverse.js"></script>
+   <script src="reverse.demo.js"></script>
+
+    <script src="includes.js"></script>
+   <script src="includes.demo.js"></script>
+
+   <script src="join.js"></script>
+   <script src="join.demo.js"></script>
+
+   <script src="map.js"></script>
+   <script src="map.demo.js"></script>
+
+   <script src="reduce.js"></script>
+   <script src="reduce.demo.js"></script>
+
+   <script src="shift.js"></script>
+   <script src="shift.demo.js"></script>
+
+   <script src="some.js"></script>
+
+   <script src="some.demo.js"></script>
+
+   <script src="unshift.js"></script>
+   <script src="unshift.demo.js"></script>
+
+
 </body>
 </html>
