--- a/staff/carolina-zhou/array-functions/index.html
+++ b/staff/carolina-zhou/array-functions/index.html
@@ -10,8 +10,8 @@
     <script src="concat.js"></script>
     <script src="concat.demo.js"></script>
 
-    <script src="copyWithin.js"></script>
-    <script src="copyWithin.demo.js"></script>
+    <script src="copy-within.js"></script>
+    <script src="copy-within.demo.js"></script>
 
     <script src="entries.js"></script>
     <script src="entries.demo.js"></script>
@@ -28,18 +28,18 @@
     <script src="find.js"></script>
     <script src="find.demo.js"></script>
 
-    <script src="findIndex.js"></script>
-    <script src="findIndex.demo.js"></script>
+    <script src="find-index.js"></script>
+    <script src="find-index.demo.js"></script>
 
     <!-- Revisar
     <script src="flat.js"></script>
-    <script src="flat.demo.js"></script> -->
+    <script src="flat.demo.js"></script> 
 
     <script src="flatMap.js"></script>
-    <script src="flatMap.demo.js"></script>
+    <script src="flatMap.demo.js"></script>-->
 
-    <script src="forEach.js"></script>
-    <script src="forEach.demo.js"></script>
+    <script src="for-each.js"></script>
+    <script src="for-each.demo.js"></script>
 
     <script src="from.js"></script>
     <script src="from.demo.js"></script>
@@ -47,8 +47,8 @@
     <script src="includes.js"></script>
     <script src="includes.demo.js"></script>
 
-    <script src="indexOf.js"></script>
-    <script src="indexOf.demo.js"></script>
+    <script src="index-of.js"></script>
+    <script src="index-of.demo.js"></script>
 
     <script src="join.js"></script>
     <script src="join.demo.js"></script>
@@ -56,8 +56,8 @@
     <script src="keys.js"></script>
     <script src="keys.demo.js"></script>
 
-    <script src="lastIndexOf.js"></script>
-    <script src="lastIndexOf.demo.js"></script>
+    <script src="last-index-of.js"></script>
+    <script src="last-index-of.demo.js"></script>
 
     <script src="map.js"></script>
     <script src="map.demo.js"></script>
@@ -71,8 +71,8 @@
     <script src="reduce.js"></script>
     <script src="reduce.demo.js"></script>
 
-    <script src="reduceRight.js"></script>
-    <script src="reduceRight.demo.js"></script>
+    <script src="reduce-right.js"></script>
+    <script src="reduce-right.demo.js"></script>
 
     <script src="reverse.js"></script>
     <script src="reverse.demo.js"></script>
@@ -86,8 +86,8 @@
     <script src="some.js"></script>
     <script src="some.demo.js"></script>
 
-    <script src="toString.js"></script>
-    <script src="toString.demo.js"></script>
+    <script src="to-string.js"></script>
+    <script src="to-string.demo.js"></script>
 
     <script src="unshift.js"></script>
     <script src="unshift.demo.js"></script>
