--- a/staff/manuel-barzi/array-functions/index.html
+++ b/staff/manuel-barzi/array-functions/index.html
@@ -7,10 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="push.js"></script>
-    <script src="push.demo.js"></script>
+    <script src="check.js"></script>
 
-    <script src="pop.js"></script>
+    <script src="push.js"></script>
+    <!-- <script src="push.demo.js"></script> -->
+    <script src="push.test.js"></script>
+
+    <!-- <script src="pop.js"></script>
     <script src="pop.demo.js"></script>
+
+    <script src="for-each.js"></script>
+    <script src="for-each.demo.js"></script> -->
+
+    <script src="map.js"></script>
+    <!-- <script src="map.demo.js"></script> -->
+    <script src="map.test.js"></script>
 </body>
 </html>
