updating array functions

--- a/staff/juan-bovo/array-functions/index.html
+++ b/staff/juan-bovo/array-functions/index.html
@@ -7,10 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="toString.js"></script>
-    <script src="toString.demo.js"></script>
+    <script src="to-string.js"></script>
+    <script src="to-string.demo.js"></script>
 
     <script src="unshift.js"></script>
     <script src="unshift.demo.js"></script>
+
+    <script src="fill-function.js"></script>
+    <script src="fill-function.demo.js"></script>
 </body>
 </html>
