final work over array functions, test included

--- a/staff/juan-bovo/array-functions/index.html
+++ b/staff/juan-bovo/array-functions/index.html
@@ -7,13 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="to-string.js"></script>
-    <script src="to-string.demo.js"></script>
+    <script src="check.js"></script>
 
+    <script src="to-string.js"></script>
+    <script src="to-string.test.js"></script>
+    <!-- <script src="to-string.demo.js"></script> -->
+    
     <script src="unshift.js"></script>
-    <script src="unshift.demo.js"></script>
+    <script src="unshift.test.js"></script>
+    <!-- <script src="unshift.demo.js"></script> -->
 
     <script src="fill-function.js"></script>
-    <script src="fill-function.demo.js"></script>
+    <script src="fill-function.test.js"></script>
+    <!-- <script src="fill-function.demo.js"></script> -->
 </body>
 </html>
