--- a/staff/manuel-galvez/array-functions/index.html
+++ b/staff/manuel-galvez/array-functions/index.html
@@ -7,22 +7,49 @@
     <title>Array functions</title>
 </head>
 <body>
-    <script src="test.js"></script>
+    <script src="check.js"></script>
+    <script src="concat.js"></script>
+    <script src="concat.demo.js"></script>
+    <script src="copyWithin.js"></script>
+    <script src="copyWithin.demo.js"></script>
+    <script src="entries.js"></script>
+    <script src="entries.demo.js"></script>
     <script src="every.js"></script>
     <script src="every.demo.js"></script>
     <script src="fill.js"></script>
     <script src="fill.demo.js"></script>
     <script src="filter.js"></script>
     <script src="filter.demo.js"></script>
+    <script src="flatMap.js"></script>
+    <script src="flatMap.demo.js"></script>
+    <script src="forEach.js"></script>
+    <script src="forEach.demo.js"></script>
     <script src="from.js"></script>
     <script src="from.demo.js"></script>
+    <script src="includes.js"></script>
+    <script src="includes.demo.js"></script>
+    <script src="indexof.js"></script>
+    <script src="indexof.demo.js"></script>
+    <script src="join.js"></script>
+    <script src="join.demo.js"></script>
+    <script src="keys.js"></script>
+    <script src="keys.demo.js"></script>
     <script src="lastIndexOf.js"></script>
     <script src="lastIndexOf.demo.js"></script>
+    <script src="lastIndexOf.test.js"></script>
     <script src="map.js"></script>
     <script src="map.demo.js"></script>
     <script src="reduce.js"></script>
     <script src="reduce.demo.js"></script>
+    <script src="reduce.test.js"></script>
     <script src="reduceRight.js"></script>
     <script src="reduceRight.demo.js"></script>
+    <script src="reduceRight.test.js"></script>
+    <script src="reverse.js"></script>
+    <script src="reverse.demo.js"></script>
+    <script src="shift.js"></script>
+    <script src="shift.demo.js"></script>
+    <script src="slice.js"></script>
+    <script src="slice.demo.js"></script>
 </body>
 </html>
